[package]
name = "psp-net"
version = "0.5.0"
edition = "2021"
license-file = "LICENSE"
keywords = ["psp", "net", "networking", "embedded", "gamedev"]
authors = ["Lorenzo Felletti <lorenzo97.felletti@gmail.com>"]
description = "Networking library for the Sony PSP"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []

[dependencies]
psp = { version = "0.3.9" }
dns-protocol = { version = "0.1.1", default-features = false }
embedded-tls = { version = "0.17", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
regex = { version = "1.10", default-features = false }
lazy_static = { version = "1.4", default-features = false, features = [
    "spin_no_std",
] }
embedded-nal = "0.8"
