[package]
name = "psp-net"
version = "0.5.4"
edition = "2021"
license-file = "LICENSE"
keywords = ["psp", "net", "networking", "embedded", "gamedev"]
authors = ["Lorenzo Felletti <lorenzo97.felletti@gmail.com>"]
description = "Networking library for the Sony PSP"
rust-version = "1.81"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# TODO: revert to empty default
default = ["http", "macros", "psp"]
macros = []
http = ["dep:httparse"]
psp = ["dep:psp"]

[dependencies]
psp = { version = "0.3.11", optional = true}
dns-protocol = { version = "0.1.1", default-features = false }
embedded-tls = { version = "0.17.0", default-features = false }
embedded-io = { version = "0.6.1", default-features = false }
rand = { version = "0.8.5", default-features = false }
rand_chacha = { version = "0.3.1", default-features = false }
regex = { version = "1.11", default-features = false }
lazy_static = { version = "1.5.0", default-features = false, features = [
    "spin_no_std",
] }
bitflags = { version = "2.6.0", default-features = false }
httparse = { version = "1.9.5", default-features = false, optional = true }
base64 = {version = "0.22", default-features = false, features = ["alloc"] }
